-
Bug
-
Resolution: Done
-
P4: Low
-
Qt Creator 4.13.0
-
None
-
-
58e633a8a45f2ab50581114f39d0e1b5827a3252 (qt-creator/qt-creator/master)
A build system can under some instances add duplicate include paths with different non-canonical variations. For example instead of adding /foo once, it adds /foo/bar1/.. /foo/bar2/.. /foo/bar3/.., etc.
The CMake-based build system for Qt Creator did that for the libs/ and plugins/ paths. See QTCREATORBUG-24514
In that case, the code model has the same list of duplicated paths and the code completion shows multiple (seemingly identical) paths when completing an #include.

To reproduce this, it is best to revert the fix for QTCREATORBUG-24514
- resulted from
-
QTCREATORBUG-24514 CMake build system: Duplicated include paths
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-24515 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 313063,2 | CppTools: De-duplicate list of include paths | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |