CppTools: De-duplicate list of include paths

It makes more sense to handle this centrally than in all the build
system plugins.

Fixes: QTCREATORBUG-24515
Change-Id: I1c0f815d44135bcfb76ce51c67b6494a50e1de48
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>